@@ -5,15 +5,12 @@
 //! Encrypts to the scrypt encrypted data format.
 
 use aes::cipher::{generic_array::GenericArray, KeyIvInit, StreamCipher};
-use hmac::{
-    digest::{typenum::Unsigned, OutputSizeUser},
-    Mac,
-};
+use hmac::Mac;
 use scrypt::Params;
 
 use crate::{
     format::{DerivedKey, Header},
-    Aes256Ctr128BE, HmacSha256, HmacSha256Key, HmacSha256Output,
+    Aes256Ctr128BE, HmacSha256, HmacSha256Key, HmacSha256Output, HEADER_SIZE, TAG_SIZE,
 };
 
 /// Encryptor for the scrypt encrypted data format.
@@ -114,10 +111,7 @@ impl<'m> Encryptor<'m> {
                 mac.finalize().into_bytes()
             }
 
-            let bound = (
-                Header::SIZE,
-                encryptor.out_len() - <HmacSha256 as OutputSizeUser>::OutputSize::USIZE,
-            );
+            let bound = (HEADER_SIZE, encryptor.out_len() - TAG_SIZE);
 
             let mut cipher = Aes256Ctr128BE::new(&encryptor.dk.encrypt(), &GenericArray::default());
             cipher
@@ -173,7 +167,7 @@ impl<'m> Encryptor<'m> {
     #[must_use]
     #[inline]
     pub const fn out_len(&self) -> usize {
-        Header::SIZE + self.plaintext.len() + <HmacSha256 as OutputSizeUser>::OutputSize::USIZE
+        HEADER_SIZE + self.plaintext.len() + TAG_SIZE
     }
 }
 
